--- a/po/fa.po
+++ b/po/fa.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-28 02:27+0800\n"
-"PO-Revision-Date: 2010-07-06 21:23+0330\n"
-"Last-Translator: Hamidreza Davoodi <hrdavodi@gmail.com>\n"
+"PO-Revision-Date: 2010-07-11 17:57+0200\n"
+"Last-Translator: Hamidreza <n3gb0y@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fa\n"
 "MIME-Version: 1.0\n"
@@ -256,7 +256,7 @@ msgstr "خط فرمان:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
-msgstr ""
+msgstr "روابط بین فایلی"
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -299,15 +299,15 @@ msgstr "ترا بایت"
 
 #: ../src/base/fm-utils.c:90
 msgid "KiB"
-msgstr ""
+msgstr "کیبی بایت"
 
 #: ../src/base/fm-utils.c:95
 msgid "MiB"
-msgstr ""
+msgstr "میبی بایت"
 
 #: ../src/base/fm-utils.c:100
 msgid "GiB"
-msgstr ""
+msgstr "گیبی بایت"
 
 #: ../src/base/fm-utils.c:105
 msgid "TiB"
@@ -584,4 +584,3 @@ msgstr "آیا از خالی کردن زباله دان  اطمینان داری
 #, c-format
 msgid "The specified directory is not valid"
 msgstr "دایرکتوری مشخص شده معتبر نیست"
-
