Commit from LXDE Translation Project with Pootle by user brother.: 133 of 133 messages translated (0 fuzzy).

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-10-04 02:06+0800\n"
-"PO-Revision-Date: 2010-08-24 12:25+0200\n"
+"PO-Revision-Date: 2010-10-10 21:51+0200\n"
 "Last-Translator: Martin <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "<b>Command line to execute:</b>"
-msgstr "<b>Kommandorad sm ska exekveras:</b>"
+msgstr "<b>Kommandorad som ska exekveras:</b>"
 
 #: ../data/ui/app-chooser.glade.h:2
 msgid "<b>File Type To be Opened:</b>"
